update for The Dark Side week 1

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Influencer - Week 4</title>
+  <title>FPS Small Group Guide</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -31,42 +31,42 @@
 
 <body>
 
-  <div align="middle"><img src="./img/guide-logo.jpg" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/series-guide-logo.jpg" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>Influencer</i> Week 4</h1>
+  <h1>Week 1 - The Dark Side</h1>
 
-  <h2>Life / Intro Questions (Choose one or two)</h2>
+  <h2>Life / Intro Questions (Choose 1 or 2)</h2>
 
     <ul>
-      <li>What are some ways to serve others?</li>
-      <li>Personally, what stops you from serving others? Give examples.</li>
+      <li>What are your biggest fears?</li>
+      <li>What would you do if your biggest fear happened to you every day?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Have you ever chosen not to serve someone because you did not want to, but you knew you should have? Explain.</li>
+      <li>Has there ever been a time in your life where you were so scared to do something that you didn't do it and then regretted it later? Explain.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>To Influence is to Serve.</li>
+      <li>Fear is the tool the enemy uses to kill your Faith!</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li>John 13:4-5 “so he got up from the meal, took off his outer clothing, and wrapped a towel around his waist. 5 After that, he poured water into a basin and began to wash his disciples’ feet, drying them with the towel that was wrapped around him.”</li>
+      <li><b>1 Kings 19: 1-9</b> Look up verse in your Bible or Bible app.</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>What does “going the extra mile” mean? What things in your life are you going the extra mile for? What do you think would happen if you went the extra mile in being an influencer?</li>
-    <li>What does integrity mean? Personally, do you think you have good integrity? When no one is looking are you always doing the right thing?</li>
-    <li>Being honest, are you the type of person that cares for people? Will you help someone who needs help even if it’s uncomfortable or awkward?</li>
+    <li>Is there a calling from God in your life that you’re ignoring? What is it and why are you ignoring it?</li>
+    <li>Have you ever been so scared that you settled for the lesser thing? You were too scared to try out for a sport so you just did it in your own time instead or you were too scared to talk to the new person so you just missed out on an opportunity that could have been great.</li>
+    <li>Do you have any fears with being a Christian? Be honest.</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,7 +74,8 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>If you go the extra mile, care for people, and do what is right when no one is watching, God can use you for anything. This week, what one thing can you work on? Going the extra mile, caring for people, or having integrity?</li>
+      <li>What are some problems that you face daily and how can you ask God to help relieve some of those problems?</li>
+      <li>Do you have the faith to be able to ask God to take away your fears so you can start living the fulfilled life He meant you to have?</li>
     </ul>
 
   <h2>Take It Out</h2>
