update for God Is week 1

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -31,58 +31,68 @@
 
 <body>
 
-  <div align="middle"><img src="./img/series-guide-logo.jpg" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>Week 1 - The Dark Side</h1>
+  <h1><i>God Is...</i> Week 1: Jesus is King</h1>
 
   <h2>Life / Intro Questions (Choose 1 or 2)</h2>
 
     <ul>
-      <li>What are your biggest fears?</li>
-      <li>What would you do if your biggest fear happened to you every day?</li>
+      <li>Do you like Thanksgiving or Christmas better? Why?</li>
+      <li>If you had to get rid of one Thanksgiving food, what would it be?</li>
     </ul>
 
-  <h2>Connection Question</h2>
+  <h2>Connection Questions</h2>
 
     <ul>
-      <li>Has there ever been a time in your life where you were so scared to do something that you didn't do it and then regretted it later? Explain.</li>
+      <li>Who is God to you?</li>
+      <li>Which statement do you relate to better?</li>
+        <ul>
+          <li>God is light.</li>
+          <li>God is faithful.</li>
+          <li>God is freedom.</li>
+        </ul>
+      <li>How do you relate this to our church values?</li>
+    </ul>
+
+  <h2>Church Value Spotlight</h2>
+
+    <ul>
+      <li>We Put God First.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Fear is the tool the enemy uses to kill your Faith!</li>
+      <li>It’s not about who you are, it’s about who God is.</li>
     </ul>
 
   <h2>Scripture</h2>
  
-    <ul>
-      <li><b>1 Kings 19: 1-9</b> Look up verse in your Bible or Bible app.</li>
-      <li>What is Jesus saying in this scripture?</li>
-    </ul>
+    <p><b>John 1:1-13</b> In the beginning was the Word, and the Word was with God, and the Word was God. <sup>2</sup>He was with God in the beginning. <sup>3</sup>All things were created through him, and apart from him not one thing was created that has been created. <sup>4</sup>In him was life, and that life was the light of all mankind. <sup>5</sup>That light shines in the darkness, and yet the darkness did not overcome it. <sup>6</sup>There was a man sent from God whose name was John. <sup>7</sup>He came as a witness to testify about the light, so that all might believe through him. <sup>8</sup>He was not the light, but he came to testify about the light. <sup>9</sup>The true light that gives light to everyone, was coming into the world. <sup>10</sup>He was in the world, and the world was created through him, and yet the world did not recognize him. <sup>11</sup>He came to his own, and his own people did not receive him. <sup>12</sup>But to all who did receive him, he gave them the right to be children of God, to those who believe in his name <sup>13</sup>who were born, not of natural descent, or of the will of the flesh, or of the will of man, but of God.</p>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Is there a calling from God in your life that you’re ignoring? What is it and why are you ignoring it?</li>
-    <li>Have you ever been so scared that you settled for the lesser thing? You were too scared to try out for a sport so you just did it in your own time instead or you were too scared to talk to the new person so you just missed out on an opportunity that could have been great.</li>
-    <li>Do you have any fears with being a Christian? Be honest.</li>
+    <li>What does verse 4 mean? “In him was life, and that life was the light of all mankind.”</li>
+    <li>What are some miracles you have seen because you were faithful?</li>
+    <li>What does freedom look like to you? What have you tried to find it in?</li>
   </ul>
 
   <h2>Life Application</h2>
 
-    <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
-
     <ul>
-      <li>What are some problems that you face daily and how can you ask God to help relieve some of those problems?</li>
-      <li>Do you have the faith to be able to ask God to take away your fears so you can start living the fulfilled life He meant you to have?</li>
+      <li>How are you going to be “the light” this week? (John 8:12)</li>
+      <li>If God is faithful, how can we be faithful? (Faithfulness leads to the miraculous)</li> 
     </ul>
 
   <h2>Take It Out</h2>
 
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>After prayer, remind them of THE WEEKEND and any upcoming group events!</li>
+    <li>Prayer for salvation in and through the students’ lives by knowing who “God Is”.</li>
+    <li>Remind your students that Fusion is right around the corner, January 24-26. They can register now at fusion.events for only $49.</li>
+    <li>If that is too much money, scholarships are available - check with your coach for more info.</li>
   </ul>
 
   </body>
