--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -31,9 +31,9 @@
 
 <body>
 
-  <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/jesus-is-king.jpg" alt="Jesus is King" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>God Is...</i> Week 1: Jesus is King</h1>
+  <h1>Jesus is King: Week 1</h1>
 
   <h2>Life / Intro Questions (Choose 1 or 2)</h2>
 
