add new logo and adjust guide title

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -33,7 +33,7 @@
 
   <div align="middle"><img src="./img/jesus-is-king.jpg" alt="Jesus is King" style="max-width:80%;height:auto;"></div>
   
-  <h1>Jesus is King: Week 1</h1>
+  <h1><i>Jesus is King</i> Week 1: God Is...</h1>
 
   <h2>Life / Intro Questions (Choose 1 or 2)</h2>
 
