--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -31,7 +31,7 @@
 
 <body>
 
-  <div align="middle"><img src="./img/jesus-is-king.jpg" alt="Jesus is King" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/series-guide-logo.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
   
   <h1><i>Jesus is King</i> Week 1: God Is...</h1>
 
