update for JIK week 2

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -31,68 +31,54 @@
 
 <body>
 
-  <div align="middle"><img src="./img/series-guide-logo.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/jik2.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>Jesus is King</i> Week 1: God Is...</h1>
+  <h1><i>Jesus is King</i> Week 2: Use This Gospel</h1>
 
-  <h2>Life / Intro Questions (Choose 1 or 2)</h2>
+  <h2>Life / Intro Questions</h2>
 
     <ul>
-      <li>Do you like Thanksgiving or Christmas better? Why?</li>
-      <li>If you had to get rid of one Thanksgiving food, what would it be?</li>
+      <li>What were your highs and lows of the last week?</li>
     </ul>
 
   <h2>Connection Questions</h2>
 
     <ul>
-      <li>Who is God to you?</li>
-      <li>Which statement do you relate to better?</li>
-        <ul>
-          <li>God is light.</li>
-          <li>God is faithful.</li>
-          <li>God is freedom.</li>
-        </ul>
-      <li>How do you relate this to our church values?</li>
-    </ul>
-
-  <h2>Church Value Spotlight</h2>
-
-    <ul>
-      <li>We Put God First.</li>
+      <li>Have you ever felt like the world was trying to separate you from your faith? If so, how did you respond?</li>
+      <li>Has there ever been a time in your life where you came up against something and you remembered a scripture that helped you through it?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>It’s not about who you are, it’s about who God is.</li>
+      <li>If you know your weapons, you’ll walk in victory.</li>
     </ul>
 
   <h2>Scripture</h2>
  
-    <p><b>John 1:1-13</b> In the beginning was the Word, and the Word was with God, and the Word was God. <sup>2</sup>He was with God in the beginning. <sup>3</sup>All things were created through him, and apart from him not one thing was created that has been created. <sup>4</sup>In him was life, and that life was the light of all mankind. <sup>5</sup>That light shines in the darkness, and yet the darkness did not overcome it. <sup>6</sup>There was a man sent from God whose name was John. <sup>7</sup>He came as a witness to testify about the light, so that all might believe through him. <sup>8</sup>He was not the light, but he came to testify about the light. <sup>9</sup>The true light that gives light to everyone, was coming into the world. <sup>10</sup>He was in the world, and the world was created through him, and yet the world did not recognize him. <sup>11</sup>He came to his own, and his own people did not receive him. <sup>12</sup>But to all who did receive him, he gave them the right to be children of God, to those who believe in his name <sup>13</sup>who were born, not of natural descent, or of the will of the flesh, or of the will of man, but of God.</p>
+    <p><b>Matthew 4:1-11</b> Then Jesus was led by the Spirit into the wilderness to be tempted by the devil. <sup>2</sup>After fasting forty days and forty nights, he was hungry. <sup>3</sup>The tempter came to him and said, “If you are the Son of God, tell these stones to become bread.” <sup>4</sup>Jesus answered, “It is written: ‘Man shall not live on bread alone, but on every word that comes from the mouth of God.’” <sup>5</sup>Then the devil took him to the holy city and had him stand on the highest point of the temple. <sup>6</sup>“If you are the Son of God,” he said, “throw yourself down. For it is written: “‘He will command his angels concerning you, and they will lift you up in their hands, so that you will not strike your foot against a stone.’” <sup>7</sup>Jesus answered him, “It is also written: ‘Do not put the Lord your God to the test.’” <sup>8</sup>Again, the devil took him to a very high mountain and showed him all the kingdoms of the world and their splendor. <sup>9</sup>“All this I will give you,” he said, “if you will bow down and worship me.” <sup>10</sup>Jesus said to him, “Away from me, Satan! For it is written: ‘Worship the Lord your God, and serve him only.’” <sup>11</sup>Then the devil left him, and angels came and attended him.</p>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>What does verse 4 mean? “In him was life, and that life was the light of all mankind.”</li>
-    <li>What are some miracles you have seen because you were faithful?</li>
-    <li>What does freedom look like to you? What have you tried to find it in?</li>
+    <li>When you encounter hard times in life, how do you typically respond?</li>
+    <li>What was Jesus’ response to the temptations of the enemy?</li>
+    <li>How can we apply Jesus’ response to our life?</li>
   </ul>
 
   <h2>Life Application</h2>
 
     <ul>
-      <li>How are you going to be “the light” this week? (John 8:12)</li>
-      <li>If God is faithful, how can we be faithful? (Faithfulness leads to the miraculous)</li> 
+      <li>What are some creative ways that you can memorize scripture to be prepared to call on them when tough times come your way?</li> 
     </ul>
 
   <h2>Take It Out</h2>
 
   <ul>
-    <li>Close small group out with prayer requests.</li>
-    <li>Prayer for salvation in and through the students’ lives by knowing who “God Is”.</li>
-    <li>Remind your students that Fusion is right around the corner, January 24-26. They can register now at fusion.events for only $49.</li>
-    <li>If that is too much money, scholarships are available - check with your coach for more info.</li>
+    <li>Close your group time with prayer requests.</li>
+    <li>We will not have fpStudents next week on November 27th because of Thanksgiving.</li>
+    <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight and lock in the super-low $49 price. The cost will increase in early December!</li>
+    <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application if needed.</li>
   </ul>
 
   </body>
