add holiday notice

--- a/FutureGroupGuides/JIK_Week3.html
+++ b/FutureGroupGuides/JIK_Week3.html
@@ -31,9 +31,9 @@
 
 <body>
 
-  <div align="middle"><img src="./img/series-guide-logo.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/jik3.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>Jesus is King</i> Week X: Closed on Sunday</h1>
+  <h1><i>Jesus is King</i> Week 3: Closed on Sundays</h1>
 
   <h2>Life / Intro Questions</h2>
 
@@ -78,6 +78,7 @@
     <li>Encourage your students in the power of the cross. Salvation is not just about positioning us to heaven so we can prove we’re good enough to get there. It’s about being in LOVE with the savior, and that salvation is about healing, forgiveness, peace, love – the list goes on. We are motivated often by “should”… but when you’re in love you’re motivated by longing for the other person, just like a healthy marriage. Faithfulness in a marriage is not about should, it’s because you’re in love with each other. This is what a life motivated by love looks like.</li>
     <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight and lock in the super-low $49 price. The cost will increase in early December!</li>
     <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application if needed.</li>
+    <li>We will NOT have fpStudents next week on Nov. 27th because of Thanksgiving. We be back the following Wednesday, Dec. 4th.</li>
   </ul>
 
   </body>
