update for JIK week 3

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -31,53 +31,54 @@
 
 <body>
 
-  <div align="middle"><img src="./img/jik2.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/jik3.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>Jesus is King</i> Week 2: Use This Gospel</h1>
+  <h1><i>Jesus is King</i> Week 3: Closed on Sundays</h1>
 
   <h2>Life / Intro Questions</h2>
 
     <ul>
-      <li>What were your highs and lows of the last week?</li>
+      <li>What do you think about Kayne’s album? Who’s heard it? Why did you choose to listen to it?</li>
     </ul>
 
   <h2>Connection Questions</h2>
 
     <ul>
-      <li>Have you ever felt like the world was trying to separate you from your faith? If so, how did you respond?</li>
-      <li>Has there ever been a time in your life where you came up against something and you remembered a scripture that helped you through it?</li>
+      <li>Do you ever think about making an impact like Kayne?</li>
+      <li>What makes it hard for you to use your platform, your influence, for God?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>If you know your weapons, you’ll walk in victory.</li>
+      <li>What motivates you is written on your life.</li>
     </ul>
 
   <h2>Scripture</h2>
  
-    <p><b>Matthew 4:1-11</b> Then Jesus was led by the Spirit into the wilderness to be tempted by the devil. <sup>2</sup>After fasting forty days and forty nights, he was hungry. <sup>3</sup>The tempter came to him and said, “If you are the Son of God, tell these stones to become bread.” <sup>4</sup>Jesus answered, “It is written: ‘Man shall not live on bread alone, but on every word that comes from the mouth of God.’” <sup>5</sup>Then the devil took him to the holy city and had him stand on the highest point of the temple. <sup>6</sup>“If you are the Son of God,” he said, “throw yourself down. For it is written: “‘He will command his angels concerning you, and they will lift you up in their hands, so that you will not strike your foot against a stone.’” <sup>7</sup>Jesus answered him, “It is also written: ‘Do not put the Lord your God to the test.’” <sup>8</sup>Again, the devil took him to a very high mountain and showed him all the kingdoms of the world and their splendor. <sup>9</sup>“All this I will give you,” he said, “if you will bow down and worship me.” <sup>10</sup>Jesus said to him, “Away from me, Satan! For it is written: ‘Worship the Lord your God, and serve him only.’” <sup>11</sup>Then the devil left him, and angels came and attended him.</p>
+    <p><b>Galatians 2:20-21 The Message (MSG)</b> What actually took place is this: I tried keeping rules and working my head off to please God, and it didn’t work. So I quit being a “law man” so that I could be God’s man. Christ’s life showed me how, and enabled me to do it. I identified myself completely with him. Indeed, I have been crucified with Christ. My ego is no longer central. It is no longer important that I appear righteous before you or have your good opinion, and I am no longer driven to impress God. Christ lives in me. The life you see me living is not “mine,” but it is lived by faith in the Son of God, who loved me and gave himself for me. I am not going to go back on that. Is it not clear to you that to go back to that old rule-keeping, peer-pleasing religion would be an abandonment of everything personal and free in my relationship with God? I refuse to do that, to repudiate God’s grace. If a living relationship with God could come by rule-keeping, then Christ died unnecessarily.</p>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>When you encounter hard times in life, how do you typically respond?</li>
-    <li>What was Jesus’ response to the temptations of the enemy?</li>
-    <li>How can we apply Jesus’ response to our life?</li>
+    <li>What’s motivating you to do what you do? Why?</li>
+    <li>What keeps you from allowing love (a relationship with Jesus full of forgiveness and grace) motivate you?</li>
   </ul>
 
   <h2>Life Application</h2>
 
     <ul>
-      <li>What are some creative ways that you can memorize scripture to be prepared to call on them when tough times come your way?</li> 
+      <li>What beliefs do you have that need to change or lies you believe that need truth?</li>
+      <li>What are two things you can do this week to change those lies into truths?</li> 
     </ul>
 
   <h2>Take It Out</h2>
 
   <ul>
-    <li>Close your group time with prayer requests.</li>
+    <li>Encourage your students in the power of the cross. Salvation is not just about positioning us to heaven so we can prove we’re good enough to get there. It’s about being in LOVE with the savior, and that salvation is about healing, forgiveness, peace, love – the list goes on. We are motivated often by “should”… but when you’re in love you’re motivated by longing for the other person, just like a healthy marriage. Faithfulness in a marriage is not about should, it’s because you’re in love with each other. This is what a life motivated by love looks like.</li>
     <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight and lock in the super-low $49 price. The cost will increase in early December!</li>
     <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application if needed.</li>
+    <li>We will NOT have fpStudents next week on Nov. 27th because of Thanksgiving. We be back the following Wednesday, Dec. 4th.</li>
   </ul>
 
   </body>
