update for the Dark Side week 2

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -35,54 +35,55 @@
 
 <body>
 
-  <div align="middle"><img src="./img/jik3.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/dark-side.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>Jesus is King</i> Week 3: Closed on Sundays</h1>
+  <h1>Week 2 - The Dark Side</h1>
 
   <h2>Life / Intro Questions</h2>
 
     <ul>
-      <li>What do you think about Kayne’s album? Who’s heard it? Why did you choose to listen to it?</li>
+      <li>Are you ready for Christmas break?</li>
+      <li>What fears have you experienced this week?</li>
     </ul>
 
-  <h2>Connection Questions</h2>
+  <h2>Connection Question</h2>
 
     <ul>
-      <li>Do you ever think about making an impact like Kayne?</li>
-      <li>What makes it hard for you to use your platform, your influence, for God?</li>
+      <li>Has fear of something ever ruined a season or time period in your life? How so?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>What motivates you is written on your life.</li>
+      <li>God hasn’t given you a Spirit of Fear!</li>
     </ul>
 
   <h2>Scripture</h2>
- 
-    <p><b>Galatians 2:20-21 The Message (MSG)</b> What actually took place is this: I tried keeping rules and working my head off to please God, and it didn’t work. So I quit being a “law man” so that I could be God’s man. Christ’s life showed me how, and enabled me to do it. I identified myself completely with him. Indeed, I have been crucified with Christ. My ego is no longer central. It is no longer important that I appear righteous before you or have your good opinion, and I am no longer driven to impress God. Christ lives in me. The life you see me living is not “mine,” but it is lived by faith in the Son of God, who loved me and gave himself for me. I am not going to go back on that. Is it not clear to you that to go back to that old rule-keeping, peer-pleasing religion would be an abandonment of everything personal and free in my relationship with God? I refuse to do that, to repudiate God’s grace. If a living relationship with God could come by rule-keeping, then Christ died unnecessarily.</p>
-
+    <ul>
+      <li><b>2 Timothy 1:7</b> For God has not given us a spirit of fear, but of power and of love and of a sound mind.</li>
+      <li><b>Matthew 6:25-27</b> Therefore, I tell you, do not worry about your life, what you will eat or drink; or about your body, what you will wear. Is not life more than food, and the body more than clothes? <sup>26</sup> Look at the birds of the air; they do not sow or reap or store away in barns, and yet your heavenly Father feeds them. Are you not much more valuable than they? <sup>27</sup> Can any one of you by worrying add a single hour to your life?</li>
+     <li>What is Jesus saying in these scriptures?</li>
+    </ul>
+  
   <h2>Discussion Questions</h2>
-
   <ul>
-    <li>What’s motivating you to do what you do? Why?</li>
-    <li>What keeps you from allowing love (a relationship with Jesus full of forgiveness and grace) motivate you?</li>
+    <li>What are some things that you worry about on a day to day basis? Give some examples.</li>
+    <li>Are you happier when you worry or don’t worry? Have you ever met a worry filled person that was happy and joyful?</li>
+    <li>Do you believe that joy is not an emotion but a choice? Why or why not?</li> 
   </ul>
 
   <h2>Life Application</h2>
-
-    <ul>
-      <li>What beliefs do you have that need to change or lies you believe that need truth?</li>
-      <li>What are two things you can do this week to change those lies into truths?</li> 
+  <ul>
+      <li>How can you connect to Jesus this week so that you may be joyful? Encourage the students that Jesus is the joy of our life and without Him we will not find true happiness and joy.</li>
     </ul>
+  
 
   <h2>Take It Out</h2>
 
   <ul>
-    <li>Encourage your students in the power of the cross. Salvation is not just about positioning us to heaven so we can prove we’re good enough to get there. It’s about being in LOVE with the savior, and that salvation is about healing, forgiveness, peace, love – the list goes on. We are motivated often by “should”… but when you’re in love you’re motivated by longing for the other person, just like a healthy marriage. Faithfulness in a marriage is not about should, it’s because you’re in love with each other. This is what a life motivated by love looks like.</li>
-    <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight and lock in the super-low $49 price. The cost will increase in early December!</li>
+    <li>Close small group out with prayer requests.</li>
+    <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight and lock in the super-low $49 price. The cost will increase in 4 DAYS on December 8th!</li>
     <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application if needed.</li>
-    <li>We will NOT have fpStudents next week on Nov. 27th because of Thanksgiving. We be back the following Wednesday, Dec. 4th.</li>
   </ul>
 
   </body>
