update for Dark Side week 3

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,44 +37,44 @@
 
   <div align="middle"><img src="./img/dark-side.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>Week 2 - The Dark Side</h1>
+  <h1>Week 3 - The Dark Side</h1>
 
   <h2>Life / Intro Questions</h2>
 
     <ul>
-      <li>Are you ready for Christmas break?</li>
+      <li>What are some of your favorite relationships in your life right now? Friends, family, significant other?</li>
       <li>What fears have you experienced this week?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Has fear of something ever ruined a season or time period in your life? How so?</li>
+      <li>Has there ever been a time where the fear of something made you lose relationships with someone? Explain that time.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>God hasn’t given you a Spirit of Fear!</li>
+      <li>Fear, if you allow it, can isolate you and kill the relationships God intends for you to have.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>2 Timothy 1:7</b> For God has not given us a spirit of fear, but of power and of love and of a sound mind.</li>
-      <li><b>Matthew 6:25-27</b> Therefore, I tell you, do not worry about your life, what you will eat or drink; or about your body, what you will wear. Is not life more than food, and the body more than clothes? <sup>26</sup> Look at the birds of the air; they do not sow or reap or store away in barns, and yet your heavenly Father feeds them. Are you not much more valuable than they? <sup>27</sup> Can any one of you by worrying add a single hour to your life?</li>
-     <li>What is Jesus saying in these scriptures?</li>
+      <li><b>Ecclesiastes 4:9-12</b> Two are better than one, because they have a good return for their labor: If either of them falls down, one can help the other up. But pity anyone who falls and has no one to help them up. Also, if two lie down together, they will keep warm. But how can one keep warm alone? Though one may be overpowered, two can defend themselves. A cord of three strands is not quickly broken.</li>
+     <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>What are some things that you worry about on a day to day basis? Give some examples.</li>
-    <li>Are you happier when you worry or don’t worry? Have you ever met a worry filled person that was happy and joyful?</li>
-    <li>Do you believe that joy is not an emotion but a choice? Why or why not?</li> 
+    <li>Where are some areas in your life where you are isolated or where you feel isolated?</li>
+    <li>Do the people in your life hold you accountable? If yes, how do they hold you accountable? If no, do you think that those are healthy relationships to be in?</li>
+    <li>Do you keep your failures and hurts hidden? Why or why not?</li> 
   </ul>
 
   <h2>Life Application</h2>
+  <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-      <li>How can you connect to Jesus this week so that you may be joyful? Encourage the students that Jesus is the joy of our life and without Him we will not find true happiness and joy.</li>
+      <li>If you keep your hurts and failures hidden, what are some steps you can take to open up about those so the Devil doesn’t tear you down.</li>
     </ul>
   
 
@@ -82,7 +82,7 @@
 
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight and lock in the super-low $49 price. The cost will increase in 4 DAYS on December 8th!</li>
+    <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight and lock in the super-low $49 price. The cost will increase on December 18th!</li>
     <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application if needed.</li>
   </ul>
 
