update for Dark Side week 4

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,44 +37,44 @@
 
   <div align="middle"><img src="./img/dark-side.jpg" alt="Series Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>Week 3 - The Dark Side</h1>
+  <h1>Week 4 - The Dark Side</h1>
 
   <h2>Life / Intro Questions</h2>
 
     <ul>
-      <li>What are some of your favorite relationships in your life right now? Friends, family, significant other?</li>
-      <li>What fears have you experienced this week?</li>
+      <li>What are the top three things on your bucket list? Are you scared of any of them?</li>
+      <li>Have you been fearful of rejection this week? How so?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Has there ever been a time where the fear of something made you lose relationships with someone? Explain that time.</li>
+      <li>What is your relationship with Jesus like? If comfortable, explain.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Fear, if you allow it, can isolate you and kill the relationships God intends for you to have.</li>
+      <li>Fear derails us from the purpose God has for us, which is to further the Kingdom!</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Ecclesiastes 4:9-12</b> Two are better than one, because they have a good return for their labor: If either of them falls down, one can help the other up. But pity anyone who falls and has no one to help them up. Also, if two lie down together, they will keep warm. But how can one keep warm alone? Though one may be overpowered, two can defend themselves. A cord of three strands is not quickly broken.</li>
+      <li><b>Luke 4:18-19</b> The Spirit of the Lord is on me, because he has anointed me to proclaim good news to the poor. He has sent me to proclaim freedom for the prisoners and recovery of sight for the blind, to set the oppressed free, to proclaim the year of the Lord’s favor.</li>
      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>Where are some areas in your life where you are isolated or where you feel isolated?</li>
-    <li>Do the people in your life hold you accountable? If yes, how do they hold you accountable? If no, do you think that those are healthy relationships to be in?</li>
-    <li>Do you keep your failures and hurts hidden? Why or why not?</li> 
+    <li>How often do you find yourself embarrassed when talking about Jesus to others?</li>
+    <li>What struggles in your own life do you feel are too powerful for you or you’re too fearful of them? Explain if comfortable.</li>
+    <li>Do you feel as though you have found some purpose in life? Or are you still searching?</li> 
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-      <li>If you keep your hurts and failures hidden, what are some steps you can take to open up about those so the Devil doesn’t tear you down.</li>
+      <li>If you get embarrassed talking about Jesus, what are some ways this week that you can move forward with it? Encourage them that 5 minutes of being uncomfortable can potentially change someone's life!</li>
     </ul>
   
 
@@ -82,8 +82,9 @@
 
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight and lock in the super-low $49 price. The cost will increase on December 18th!</li>
+    <li>Remind your students that RIGHT NOW is the best time to register for Fusion – they need to go to <a href="https://fusion.events">fusion.events</a> tonight for their LAST CHANCE to lock in the super-low $49 price. The cost will increase tonight at midnight!</li>
     <li>Refuse to let money stand in the way – check <a href="https://fpsleaders.com">FPSLeaders.com</a> for a scholarship application if needed.</li>
+    <li>We will not have fpStudents for two weeks because of Christmas and New Years Day - we will be back on Wednesday, Jan. 8th!</li>
   </ul>
 
   </body>
